--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -13,6 +13,23 @@ ol.breadcrumb {
   padding: 0;
   background: none;
 }
+
+.card {
+  border-radius: 1rem;
+  background: linear-gradient(#fff, #eee);
+}
+
+.card-body {
+  margin: 1rem;
+}
+
+.card-body h1 {
+  font-size: 140%;
+}
+
+.card-body p {
+  font-size: 90%;
+}
 </style>
 
 </head>
