--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -14,21 +14,34 @@ ol.breadcrumb {
   background: none;
 }
 
-.card {
-  border-radius: 1rem;
-  background: linear-gradient(#fff, #eee);
-}
-
-.card-body {
+.usercard {
+  height: 9rem;
+  position: relative;
   margin: 1rem;
+  width: 50rem;
+  display: inline-block;
 }
 
-.card-body h1 {
+.usercard-body {
+  margin: 1rem;
+  position: absolute;
+  left: 10rem;
+}
+
+.usercard-body h1 {
   font-size: 140%;
+  margin-top: 0;
 }
 
-.card-body p {
+.usercard-body p {
   font-size: 90%;
+  margin-bottom: 0.5rem;
+}
+
+.usercard img.avatar {
+  width: 9rem;
+  height: 9rem;
+  position: absolute;
 }
 </style>
 
