--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -64,7 +64,8 @@ ol.breadcrumb {
     </ol>
   </nav>
   {% endif %}
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.title }} <small>{{ page.subtitle }}</small></h1>
+  {{ page.intro }}
 </div>
 
 {{ content }}
