--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -43,6 +43,21 @@ ol.breadcrumb {
   height: 9rem;
   position: absolute;
 }
+
+.usercard .popover {
+  max-width: none;
+  width: auto;
+  white-space: nowrap;
+}
+
+.usercard .popover .popover-content > :last-child {
+  margin-bottom: 0;
+}
+
+.btn-link {
+  padding: 0;
+  font-size: inherit;
+}
 </style>
 
 </head>
@@ -75,6 +90,10 @@ ol.breadcrumb {
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+
+<script language="javascript">
+$("[data-toggle=popover]").popover({html: true})
+</script>
 
 </body>
 </html>
