--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -60,6 +60,13 @@ ol.breadcrumb {
   padding: 0;
   font-size: inherit;
 }
+
+img.img-inline {
+  width: 1em;
+  height: 1em;
+  margin-right: 0.3em;
+  margin-left: 0.3em;
+}
 </style>
 
 </head>
