--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -64,8 +64,17 @@ ol.breadcrumb {
 img.img-inline {
   width: 1em;
   height: 1em;
-  margin-right: 0.3em;
-  margin-left: 0.3em;
+  margin-right: 0.5em;
+  margin-left: 0.5em;
+}
+
+img.img-repository-icon {
+  border-radius: 6px;
+  box-shadow: rgba(31, 35, 40, 0.15) 0px 0px 0px 1px;
+  min-height: 24px !important;
+  min-width: 24px !important;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 </style>
 
