Add community graphs

--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -76,6 +76,11 @@ img.img-repository-icon {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
+
+img.img-communitygraph {
+  width: 100%;
+  margin-top: 1em;
+}
 </style>
 
 </head>
