--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -82,6 +82,10 @@ img.img-communitygraph {
   max-height: 50rem;
   margin: 1rem;
 }
+
+img.img-contributiongraph {
+  width: 100%;
+}
 </style>
 
 </head>
