Add repository charts

--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -16,6 +16,12 @@ ol.breadcrumb {
   background: none;
 }
 
+.community-float {
+  width: 50rem;
+  display: inline-block;
+  vertical-align: top;
+}
+
 .usercard {
   height: 9rem;
   position: relative;
@@ -77,6 +83,7 @@ img.img-repository-icon {
   margin-bottom: 0.5em;
 }
 
+img.img-repositorychart,
 img.img-communitygraph {
   max-width: 50rem;
   max-height: 50rem;
