--- a/report/_layouts/default.html
+++ b/report/_layouts/default.html
@@ -20,6 +20,7 @@ ol.breadcrumb {
   width: 50rem;
   display: inline-block;
   vertical-align: top;
+  padding-right: 2rem;
 }
 
 .usercard {
@@ -85,7 +86,6 @@ img.img-repository-icon {
 
 img.img-repositorychart,
 img.img-communitygraph {
-  max-width: 50rem;
   max-height: 50rem;
   margin: 1rem;
 }
